--- a/application/views/app/relatorios/pdf/relatorio-os.twig
+++ b/application/views/app/relatorios/pdf/relatorio-os.twig
@@ -1,13 +1,54 @@
 <html>
     <body>
         <style type="text/css">
-            .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;border-width:1px;border-style:solid;}
-            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
-            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;}
-            .tg .tg-yw4l{vertical-align:top}
+            table.greyGridTable {
+            border: 2px solid #FFFFFF;
+            width: 100%;
+            text-align: center;
+            border-collapse: collapse;
+            }
+            table.greyGridTable td, table.greyGridTable th {
+            border: 1px solid #FFFFFF;
+            padding: 3px 4px;
+            }
+            table.greyGridTable tbody td {
+            font-size: 13px;
+            }
+            table.greyGridTable td:nth-child(even) {
+            background: #EBEBEB;
+            }
+            table.greyGridTable thead {
+            background: #FFFFFF;
+            border-bottom: 4px solid #333333;
+            }
+            table.greyGridTable thead th {
+            font-size: 15px;
+            font-weight: bold;
+            color: #333333;
+            text-align: center;
+            border-left: 2px solid #333333;
+            }
+            table.greyGridTable thead th:first-child {
+            border-left: none;
+            }
+
+            table.greyGridTable tfoot {
+            font-size: 14px;
+            font-weight: bold;
+            color: #333333;
+            border-top: 4px solid #333333;
+            }
+            table.greyGridTable tfoot td {
+            font-size: 14px;
+            }
         </style>
 
-        <table class="tg">
+        <div class="header" style="text-align: center">
+            <h1>SYSTEM OS - ORDENS DE SERVIÇOS</h1>
+            <h4>Relatório emitido pelo sistema</h4>
+        </div>
+        <hr />
+        <table class="greyGridTable">
             <thead>
                 <tr>
                     <th class="tg-yw4l">ID</th>
@@ -16,9 +57,24 @@
                     <th class="tg-yw4l">Técnico Responsável</th>
                     <th class="tg-yw4l">Criado em</th>
                     <th class="tg-yw4l">Atualizado</th>
+                    <th>Peças</th>
+                    <th>Serviço</th>
                     <th class="tg-yw4l">Valor Total</th>
                 </tr>
-                </thead>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th class="tg-yw4l">ID</th>
+                    <th class="tg-yw4l">Status</th>
+                    <th class="tg-yw4l">Cliente</th>
+                    <th class="tg-yw4l">Técnico Responsável</th>
+                    <th class="tg-yw4l">Criado em</th>
+                    <th class="tg-yw4l">Atualizado</th>
+                    <th>Peças</th>
+                    <th>Serviço</th>
+                    <th class="tg-yw4l">Valor Total</th>
+                </tr>
+            </tfoot>
             <tbody>
                 {% for os in ordens %}
                     <tr>
@@ -28,6 +84,8 @@
                         <td>{{ os.tecnico.nome }}</td>
                         <td>{{ os.criadoEm.format('d/m/Y H:i:s') }}</td>
                         <td>{{ os.atualizadoEm.format('d/m/Y H:i:s') }}</td>
+                        <td><b>R$ {{ os.valorPecas }}</b></td>
+                        <td><b>R$ {{ os.valorServico}}</b></td>
                         <td><b>{% if os.valorTotal > 0 %} R$ {{ os.valorTotal }} {% else %} R$ 0.0 {% endif %}</b></td>
                     </tr>
                 {% endfor %}
