--- a/application/views/app/relatorios/index.twig
+++ b/application/views/app/relatorios/index.twig
@@ -48,12 +48,12 @@
 
                             <div class="col-sm-4">
                                 <select class="form-control" id="status" name="status[]" multiple required>
-                                    <option></option>
-                                    <option value="Orçamento">Orçamento</option>
-                                    <option value="Em andamento">Em andamento</option>
-                                    <option value="Aberto">Aberto</option>
-                                    <option value="Finalizado">Finalizado</option>
-                                    <option value="Cancelado">Cancelado</option>
+                                    <option value="Aguardando Atendimento">Aguardando Atendimento</option>
+                                    <option value="Orçamento Aprovado">Orçamento Aprovado</option>
+                                    <option value="Orçamento Reprovado">Orçamento Reprovado</option>
+                                    <option value="Equipamento em Análise">Equipamento em Análise</option>
+                                    <option value="Aguardando Retirada">Aguardando Retirada</option>
+                                    <option value="OS Finalizada">OS Finalizada</option>
                                 </select>
                             </div>
                         </div>
