--- a/application/views/app/autenticacao/login.twig
+++ b/application/views/app/autenticacao/login.twig
@@ -45,16 +45,15 @@
                         <input type="password" class="form-control" placeholder="Senha" name="senha">
                         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     </div>
+                    <div class="form-group">
+                        <select class="form-control" name="tipo">
+                            <option value="tecnico">Técnico</option>
+                            <option value="cliente">Cliente</option>
+                        </select>
+                    </div>
                     <div class="row">
-                        <div class="col-xs-8">
-                            <div class="checkbox icheck">
-                                <label>
-                                    <input type="checkbox"> Lembrar
-                                </label>
-                            </div>
-                        </div>
                         <!-- /.col -->
-                        <div class="col-xs-4">
+                        <div class="col-xs-12">
                             <button type="submit" class="btn btn-primary btn-block btn-flat">Entrar</button>
                         </div>
                         <!-- /.col -->
