--- a/application/views/app/clientes/adicionar.twig
+++ b/application/views/app/clientes/adicionar.twig
@@ -213,5 +213,7 @@
                 $("#documento").mask('00.000.000/0000-00', {reverse: true});
             }
         });
+
+            $('select').select2();
     </script>
 {% endblock %}
