--- a/application/views/app/ordens_de_servico/adicionar.twig
+++ b/application/views/app/ordens_de_servico/adicionar.twig
@@ -88,3 +88,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
