--- a/application/views/app/usuarios/adicionar.twig
+++ b/application/views/app/usuarios/adicionar.twig
@@ -96,3 +96,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
