--- a/application/views/app/usuarios/editar.twig
+++ b/application/views/app/usuarios/editar.twig
@@ -97,3 +97,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
