--- a/application/views/app/dashboard.twig
+++ b/application/views/app/dashboard.twig
@@ -160,4 +160,38 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="box">
+                <div class="box-header with-border">
+                    <h3 class="box-title"> Avaliações </h3>
+                </div>
+                <div class="box-body">
+                    <table id="tabela-ordens-de-servicos" class="table table-hover table-striped">
+                        <thead>
+                        <tr>
+                            <th>OS</th>
+                            <th>Cliente</th>
+                            <th>Tecnico</th>
+                            <th>Avaliação</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for av in avaliacoes %}
+                            {% if av.avaliacao != 'SEM AVALIAÇÃO' %}
+                                <tr {% if av.avaliacao == 'Ruim' %} style="color:red;" {% endif %}>
+                                    <td>{{ av.id }}</td>
+                                    <td>{{ av.cliente.nome }}</td>
+                                    <td>{{ av.tecnico.nome }}</td>
+                                    <td>{{ av.avaliacao }}</td>
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
