--- a/application/views/app/ordens_de_servico/editar.twig
+++ b/application/views/app/ordens_de_servico/editar.twig
@@ -137,3 +137,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
