--- a/application/views/app/ordens_de_servico/produtos/editar.twig
+++ b/application/views/app/ordens_de_servico/produtos/editar.twig
@@ -129,3 +129,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script type="text/javascript">
+        $('select').select2();
+    </script>
+{% endblock %}
