--- a/application/views/app/produtos/adicionar.twig
+++ b/application/views/app/produtos/adicionar.twig
@@ -128,3 +128,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
