--- a/application/views/app/produtos/editar.twig
+++ b/application/views/app/produtos/editar.twig
@@ -129,3 +129,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    <script>
+        $('select').select2();
+    </script>
+{% endblock %}
