--- a/application/views/app/fornecedores/index.twig
+++ b/application/views/app/fornecedores/index.twig
@@ -2,7 +2,7 @@
 
 {% block content_header %}
     <h1>
-        fornecedores
+        Fornecedores
         <small>Listagem geral</small>
     </h1>
     <ol class="breadcrumb">
