--- a/application/views/app/ordens_de_servico/adicionar.twig
+++ b/application/views/app/ordens_de_servico/adicionar.twig
@@ -2,7 +2,7 @@
 
 {% block content_header %}
     <h1>
-        Produtos
+        Ordens de Serviços
         <small>Cadastro de nova ordem de serviço</small>
     </h1>
     <ol class="breadcrumb">
