--- a/application/views/app/dashboard.twig
+++ b/application/views/app/dashboard.twig
@@ -31,7 +31,7 @@
                 <div class="inner">
                     <h3>{{ produtos }}</sup></h3>
 
-                    <p>Produtos diferentes</p>
+                    <p>Produtos</p>
                 </div>
                 <div class="icon">
                     <i class="ion ion-stats-bars"></i>
